# DocSense

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: PRD-DocSense-Crawler.md  PRD-DocSense.md  llms-txt-contract.md
infra/loki/: loki-config.yml
infra/prometheus/: prometheus.yml
prometheus_data/wal/: 00000000
src/: __init__.py  telemetry.py
src/cli/: __init__.py
src/evaluate/: __init__.py
src/generate/: __init__.py
src/retrieve/: __init__.py
src/sources/: __init__.py
tests/fixtures/: __init__.py
