[project]
name = "docsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.138.0",
    "fastembed>=0.4.2",
    "httpx[http2]>=0.28.1",
    "instructor>=1.15.3",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "markdown-it-py>=4.2.0",
    "onnxruntime==1.19.0",
    "openai>=2.43.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "redis>=8.0.0",
    "sentence-transformers>=5.6.0",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "torch==2.0.1",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.6",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.18",
]
